2004-04-23  Tomohiro KUBOTA <kubota@debian.org>

	* The --borderless option was not documented in the manpage.
	  Patch from Nicolas Kratz <nick@ikarus.dyndns.org>,
	  Debian Bug#244657.

2004-04-18 MINAMI Hirokazu <minami@mistfall.net>

	* x_shortcut.c: before assigning new function to a key,
	clear already registered function.

2004-04-18  Seiichi SATO  <ssato@sh.rim.or.jp>

	* x_screen.c: Moved all callbacks for uim inside #ifdef USE_UIM.

2004-04-15  Seiichi SATO  <ssato@sh.rim.or.jp>

	* pixmap_engine.c: fixed tiny memory leak.

2004-04-12  Seiichi SATO  <ssato@sh.rim.or.jp>

	* x_uim.c (x_uim_delete): To plug a file descriptor leak, closed pipes
	for uim-helper-candwin-gtk.

	* x_uim.c (x_uim_new): Plugged a memory leak detected by valgrind. It
	was caused by uninitialized variable 'uim->encoding'.

	* x_screen.c (draw_preedit_str, get_segment_spot): Calculate the preedit
	position correctly in the back scroll mode.

	* x_uim.c (candwin_update_position): Hide a candidate window when the
	cursor position is out of screen.

2004-04-11  Seiichi SATO  <ssato@sh.rim.or.jp>

	* Added uim support.

2004-04-03  MINAMI Hirokazu  <minami@mistfall.net>

	* tool/mlconfig/Makefile.in: re-introduced IMAGELIB_CFLAGS.   
	(thanks to TAKAHASHI Tamotsu)

2004-03-28  MINAMI Hirokazu  <minami@mistfall.net>

	* xwnidow/x_shortcut.c: default shortcut should be disabled
	if some string is assigned to the key combination.

2004-03-23  MINAMI Hirokazu  <minami@mistfall.net>

	* mlterm/ml_char.c: ml_char_set() now checks its input values
	when compiled with -DDEBUG.

2004-03-22  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_font.c: added a sanity check.
	(in *aafont, an encoding must follow a font family name)

2004-03-15  MINAMI Hirokazu  <minami@mistfall.net>

	* kiklib/src/kik_pty_streams.c: warn if /dev/ptmx could not be opened.

2004-03-12  MINAMI Hirokazu  <minami@mistfall.net>

	* tools/mltconfig/po/Makevars:
	set subdir to the correct relative path.